2006-09-22  Richard Guenther  <rguenther@suse.de>

PR middle-end/28964
	* cfgexpand.c (stack_var_size_cmp): Use DECL_UID to make
	sort of stack variables stable.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@117146 138bc75d-0d04-0410-961f-82ee72b054a4